--- a/index.css
+++ b/index.css
@@ -1,4 +1,123 @@
+html {
+  width: 100%;
+  height: 100%;
+}
+
 body {
+  width: 100%;
+  height: 100%;
   margin: 0; /* reset */
   background-color: #000;
+}
+
+.games {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.game {
+  position: relative;
+  flex: 2;
+  width: 100%;
+  height: 100%;
+  transition: flex 0.4s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.game.is-active {
+  flex: 3;
+}
+
+/* Full image */
+
+.game__full-image {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -2;
+}
+
+.game__full-image--left {
+  left: 0;
+  object-position: left center;
+}
+
+.game__full-image--center {
+  left: 50%;
+  object-position: center center;
+  transform: translateX(-50%);
+}
+
+.game__full-image--right {
+  right: 0;
+  object-position: right center;
+}
+
+.game .game__full-image {
+  opacity: 0;
+}
+
+.game.is-active .game__full-image {
+  opacity: 1;
+}
+
+/* Small image */
+
+.game__small-image {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+  filter: saturate(100%);
+}
+
+.game__small-image--left {
+  left: 0;
+  object-position: left center;
+  clip-path: inset(0 70.1% 0 0); /* TODO: How to calculate? */
+  transform-origin: calc(100% / 7 * 3) center;
+}
+
+.game__small-image--center {
+  left: 0;
+  object-position: center center;
+  clip-path: inset(0 35.05% 0 35.05%); /* TODO: How to calculate? */
+  transform-origin: center center;
+  /* transform: translateX(-50%); */
+}
+
+.game__small-image--right {
+  right: 0;
+  object-position: right center;
+  clip-path: inset(0 0 0 70.1%); /* TODO: How to calculate? */
+  /* clip-path: inset(0 0 0 calc(100% - (100% / 7 * 2))); */
+  transform-origin: calc(100% - (100% / 7 * 3)) center;
+}
+
+.game .game__small-image {
+  opacity: 0;
+  transform: scale(1.1);
+  transition: clip-path 0s linear, transform 0s linear;
+}
+
+.game.is-active .game__small-image {
+  opacity: 1;
+  transform: scale(1);
+  transition: clip-path 0.4s cubic-bezier(0.23, 1, 0.32, 1), transform 5s ease-in-out;
+}
+
+.game.is-active .game__small-image--left {
+  clip-path: inset(0 calc(100% - (100% / 7 * 3)) 0 0);
+}
+
+.game.is-active .game__small-image--center {
+  clip-path: inset(0 calc(100% / 7 * 2) 0 calc(100% / 7 * 2));
+}
+
+.game.is-active .game__small-image--right {
+  clip-path: inset(0 0 0 calc(100% - (100% / 7 * 3)));
 }
